Support ipv6 and environment variables: SENDER_xxx and CONNECT_xxx

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ macro(with_ext _NAME)
   set(AIR_SOURCES ${AIR_SOURCES} "${_NAME}.c.c")
   set(AIR_DEPENDS ${AIR_DEPENDS} "${_NAME}.c")
 endmacro(with_ext)
+with_ext("common")
 with_ext("client")
 with_ext("server")
 find_package(Threads)
